POM.xml -> spring Security auskommentiert für Tests. application.properties -> spring Logindaten eingefügt für Tests.
Main: ToDoListApplication.java den Namen angepasst für korrektes Camelcase.

Entity "ToDo" erstellt + diverse Mappings(create,update,delete)

HttpExceptionhandler ist noch leer und ohne Funktion.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=todo-list
 spring.datasource.url=jdbc:postgresql://ep-ancient-mud-a2y9jp3i-pooler.eu-central-1.aws.neon.tech/neondb?&sslmode=require
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
-#spring.datasource.username=neondb_owner
-#spring.datasource.password=npg_lXSVpnk3cNg9
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.generate-ddl=true
+
+spring.security.user.name=user
+spring.security.user.password=6b358604-f6ab-4b05-b003-7938b80d5c54
