--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.generate-ddl=true
+
+logging.level.org.springframework.security=DEBUG
