--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,9 @@ spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 
+sendgrid.api.key=${SENDGRID_API_KEY}
+sendgrid.from.email=${SENDGRID_FROM_EMAIL}
+
+app.url.frontend=${FRONTEND_URL}
+
 logging.level.org.springframework.security=DEBUG
